gitops/gitops-apps/logs/opensearch.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: opensearch
  labels:
    pod-security.kubernetes.io/enforce: privileged

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opensearch
  namespace: opensearch
spec:
  hostnames:
  - dashboards.podzone.cloud
  parentRefs:
  - name: gateway
    namespace: kube-system
    kind: Gateway
  rules:
  - backendRefs:
    - name: opensearch-od-opensearch-dashboards
      port: 5601
    matches:
    - path:
        type: PathPrefix
        value: /
